# fraud

./: .gitignore  README.md  dev_reqs.txt  main.py  pyproject.toml  run_tests.sh
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
fraud/: __init__.py  base.py  faker.py
fraud/core/: api.py  utils.py
fraud/plugins/: faker.py  gliner.py
tests/: test_api.py  test_base.py  test_faker.py  test_utils.py
